--- a/Source/options.html
+++ b/Source/options.html
@@ -1,12 +1,22 @@
 <html>
 <head>
-  <title>Downworthy Options</title>
+    <title>Downworthy Options</title>
 </head>
 <body>
-  <p><input type="checkbox" id="checkDaily" name="checkDaily"> <label for="checkDaily">Once per day, randomly choose whether to run Downworthy for that day.</label></p>
-  <p><label for="excluded">Exclude the following URLs (comma-separated): </label><input type="text" id="excluded" name="excluded" /></p>
+<p>
+    <label>
+        <input type="checkbox" id="checkDaily" name="checkDaily">
+        Once per day, randomly choose whether to run
+        Downworthy for that day.
+    </label>
+</p>
 
+<p>
+    <label>Exclude the following URLs (comma-separated):
+        <input type="text" id="excluded" name="excluded"/>
+    </label>
+</p>
 
-  <script src="options.js"></script>
+<script src="options.js"></script>
 </body>
 </html>
